force-app/main/default/objects/Screening__c/Screening__c.object-meta.xml
<CustomObject>
    <label>Screening</label>
    <nameField>
        <label>Screening Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screenings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>