force-app/main/default/objects/Screening__c/fields/ADL_s__c.field-meta.xml
<CustomField>
    <fullName>ADL_s__c</fullName>
    <description>Can you complete your own ADL&apos;s?</description>
    <label>ADL&apos;s</label>
    <length>50</length>
    <type>Text</type>
</CustomField>