force-app/main/default/objects/Screening__c/fields/Are_you_your_own_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Are_you_your_own_Guardian__c</fullName>
    <label>Are you your own Guardian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>