force-app/main/default/objects/Screening__c/fields/Auth_form_completed__c.field-meta.xml
<CustomField>
    <fullName>Auth_form_completed__c</fullName>
    <label>Auth form completed</label>
    <type>Date</type>
</CustomField>