force-app/main/default/objects/Screening__c/fields/Call_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Call_Resolution__c</fullName>
    <label>Call Resolution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled Service</fullName>
            </value>
            <value>
                <fullName>External Resources Provided</fullName>
            </value>
            <value>
                <fullName>Service not available at PI</fullName>
            </value>
            <value>
                <fullName>Wait list too long</fullName>
            </value>
            <value>
                <fullName>Transferred Internally</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>