force-app/main/default/objects/Screening__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Screenings</relationshipLabel>
    <relationshipName>Screenings</relationshipName>
    <type>Lookup</type>
</CustomField>