force-app/main/default/objects/Screening__c/fields/Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager__c</fullName>
    <label>Case Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>