force-app/main/default/objects/Screening__c/fields/Client_Currently_Residing__c.field-meta.xml
<CustomField>
    <fullName>Client_Currently_Residing__c</fullName>
    <label>Client Currently Residing?</label>
    <type>TextArea</type>
</CustomField>