force-app/main/default/objects/Screening__c/fields/Commitment_Probation__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Probation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>On commitment or probation?</inlineHelpText>
    <label>Commitment/Probation</label>
    <type>Checkbox</type>
</CustomField>