force-app/main/default/objects/Screening__c/fields/Commitment_Probation_Description__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Probation_Description__c</fullName>
    <label>Commitment/Probation Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>