force-app/main/default/objects/Screening__c/fields/Communicable_Disease_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Communicable_Disease_Symptoms__c</fullName>
    <label>Communicable Disease Symptoms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>