force-app/main/default/objects/Screening__c/fields/Comp_Eval_Completed_within_last_year__c.field-meta.xml
<CustomField>
    <fullName>Comp_Eval_Completed_within_last_year__c</fullName>
    <label>Comp Eval Completed within last year?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>