force-app/main/default/objects/Screening__c/fields/Comprehensive_Evaluation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Comprehensive_Evaluation_Notes__c</fullName>
    <description>(date completed, provider name, recommendation for ARMHS; If no comp eval detail follow-up plan)</description>
    <label>Comprehensive Evaluation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>