force-app/main/default/objects/Screening__c/fields/Coping_Skills__c.field-meta.xml
<CustomField>
    <fullName>Coping_Skills__c</fullName>
    <description>What are your coping skills? How do you manage mental health symptoms?</description>
    <inlineHelpText>What are your coping skills? How do you manage mental health symptoms?</inlineHelpText>
    <label>Coping Skills</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>