force-app/main/default/objects/Screening__c/fields/COVID_Status__c.field-meta.xml
<CustomField>
    <fullName>COVID_Status__c</fullName>
    <inlineHelpText>Symptoms: Yes, No, Test status</inlineHelpText>
    <label>COVID Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>