force-app/main/default/objects/Screening__c/fields/Criticism__c.field-meta.xml
<CustomField>
    <fullName>Criticism__c</fullName>
    <description>Have people annoyed/criticized you?</description>
    <inlineHelpText>Have people annoyed/criticized you?</inlineHelpText>
    <label>Criticism</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>