force-app/main/default/objects/Screening__c/fields/Current_Health_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Current_Health_Concerns__c</fullName>
    <inlineHelpText>Select all that apply</inlineHelpText>
    <label>Current Health Concerns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Significant Health Issues</fullName>
            </value>
            <value>
                <fullName>72 hours Nurse Follow Up</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Seizures</fullName>
            </value>
            <value>
                <fullName>Insulin Dependence</fullName>
            </value>
            <value>
                <fullName>Wounds</fullName>
            </value>
            <value>
                <fullName>Infections</fullName>
            </value>
            <value>
                <fullName>Mobility Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>