force-app/main/default/objects/Screening__c/fields/Current_Health_Issues__c.field-meta.xml
<CustomField>
    <fullName>Current_Health_Issues__c</fullName>
    <label>Current Health Issues</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>