force-app/main/default/objects/Screening__c/fields/Current_Legal_Issues__c.field-meta.xml
<CustomField>
    <fullName>Current_Legal_Issues__c</fullName>
    <inlineHelpText>Crisis Residential unable to take Level 2-3 Sex Offenders</inlineHelpText>
    <label>Current Legal Issues</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>