force-app/main/default/objects/Screening__c/fields/Current_Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Living_Situation__c</fullName>
    <inlineHelpText>Satisfied with current living situation?</inlineHelpText>
    <label>Current Living Situation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>