force-app/main/default/objects/Screening__c/fields/Current_Medications__c.field-meta.xml
<CustomField>
    <fullName>Current_Medications__c</fullName>
    <inlineHelpText>Current medications? Any concerns with your medications? Pharmacy or provider restrictions?</inlineHelpText>
    <label>Current Medications</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>