force-app/main/default/objects/Screening__c/fields/Current_PI_Services__c.field-meta.xml
<CustomField>
    <fullName>Current_PI_Services__c</fullName>
    <label>Current PI Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>