force-app/main/default/objects/Screening__c/fields/Current_Residency__c.field-meta.xml
<CustomField>
    <fullName>Current_Residency__c</fullName>
    <inlineHelpText>Where are you currently residing?</inlineHelpText>
    <label>Current Residency</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>