force-app/main/default/objects/Screening__c/fields/Current_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Situation__c</fullName>
    <description>What is the current situation the individual is seeking help for (MH diagnosis, substance use, last DA, symptoms reported and observed)?</description>
    <inlineHelpText>What is the current situation the individual is seeking help for (MH diagnosis, substance use, last DA, symptoms reported and observed)?</inlineHelpText>
    <label>Current Situation</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>