force-app/main/default/objects/Screening__c/fields/Cut_Down__c.field-meta.xml
<CustomField>
    <fullName>Cut_Down__c</fullName>
    <description>Do you feel you should cut down on your use?</description>
    <inlineHelpText>Do you feel you should cut down on your use?</inlineHelpText>
    <label>Cut Down</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>