force-app/main/default/objects/Screening__c/fields/Date_of_Last_Use__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Use__c</fullName>
    <label>Date of Last Use</label>
    <type>Date</type>
</CustomField>