force-app/main/default/objects/Screening__c/fields/Denial_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Denial_Narrative__c</fullName>
    <label>Denial Narrative</label>
    <type>TextArea</type>
</CustomField>