force-app/main/default/objects/Screening__c/fields/Diagnostic_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Assessment__c</fullName>
    <label>Diagnostic Assessment</label>
    <type>Date</type>
</CustomField>