force-app/main/default/objects/Screening__c/fields/Documents_sent_to_FOA__c.field-meta.xml
<CustomField>
    <fullName>Documents_sent_to_FOA__c</fullName>
    <label>Documents sent to FOA</label>
    <type>Date</type>
</CustomField>