force-app/main/default/objects/Screening__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <inlineHelpText>Highest level attended or completed</inlineHelpText>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Formal Education</fullName>
            </value>
            <value>
                <fullName>Elementary</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Occupational Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>