force-app/main/default/objects/Screening__c/fields/Education_Notes__c.field-meta.xml
<CustomField>
    <fullName>Education_Notes__c</fullName>
    <label>Education Notes</label>
    <type>TextArea</type>
</CustomField>