force-app/main/default/objects/Screening__c/fields/Email_for_MA_letter_sent_to_team__c.field-meta.xml
<CustomField>
    <fullName>Email_for_MA_letter_sent_to_team__c</fullName>
    <label>Email for MA letter sent to team</label>
    <type>TextArea</type>
</CustomField>