force-app/main/default/objects/Screening__c/fields/Employment_Other__c.field-meta.xml
<CustomField>
    <fullName>Employment_Other__c</fullName>
    <label>Employment Other</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>