force-app/main/default/objects/Screening__c/fields/Eviction_Rent_History__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Rent_History__c</fullName>
    <description>Do you have an eviction and/or non-rent payment?</description>
    <label>Eviction/Rent History</label>
    <type>TextArea</type>
</CustomField>