force-app/main/default/objects/Screening__c/fields/Finance_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Finance_Concerns__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Concerns with finances?</inlineHelpText>
    <label>Finance Concerns</label>
    <type>Checkbox</type>
</CustomField>