force-app/main/default/objects/Screening__c/fields/Finance_Concerns_Description__c.field-meta.xml
<CustomField>
    <fullName>Finance_Concerns_Description__c</fullName>
    <label>Finance Concerns Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>