force-app/main/default/objects/Screening__c/fields/Financial_Management__c.field-meta.xml
<CustomField>
    <fullName>Financial_Management__c</fullName>
    <description>Are you managing your finances independently? Do you have any concerns about money management?</description>
    <inlineHelpText>Are you managing your finances independently? Do you have any concerns about money management?</inlineHelpText>
    <label>Financial Management</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>