force-app/main/default/objects/Screening__c/fields/Financial_Supports__c.field-meta.xml
<CustomField>
    <fullName>Financial_Supports__c</fullName>
    <description>Do you receive financial support for housing or food or medical? If yes, do you feel the help you receive meets your needs? If not, would you be interested in resources for support in those areas?</description>
    <inlineHelpText>Do you receive financial support for housing or food or medical? If yes, do you feel the help you receive meets your needs? If not, would you be interested in resources for support in those areas?</inlineHelpText>
    <label>Financial Supports</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>