force-app/main/default/objects/Screening__c/fields/Food_Restrictions_Dietary_Needs__c.field-meta.xml
<CustomField>
    <fullName>Food_Restrictions_Dietary_Needs__c</fullName>
    <description>Maghakian and Diane Ahrens</description>
    <inlineHelpText>Maghakian and Diane Ahrens</inlineHelpText>
    <label>Food Restrictions/Dietary Needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>