force-app/main/default/objects/Screening__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>