force-app/main/default/objects/Screening__c/fields/Functional_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Functional_Assessment__c</fullName>
    <label>Functional Assessment</label>
    <type>Date</type>
</CustomField>