force-app/main/default/objects/Screening__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <description>Recovery Goals for Treatment</description>
    <inlineHelpText>Recovery Goals for Treatment</inlineHelpText>
    <label>Goals</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>