force-app/main/default/objects/Screening__c/fields/Group_Home_Lifestyle__c.field-meta.xml
<CustomField>
    <fullName>Group_Home_Lifestyle__c</fullName>
    <description>Do you understand and agree to a group home lifestyle?</description>
    <label>Group Home Lifestyle</label>
    <type>TextArea</type>
</CustomField>