force-app/main/default/objects/Screening__c/fields/Guilty__c.field-meta.xml
<CustomField>
    <fullName>Guilty__c</fullName>
    <description>Have you felt guilty/bad about your use?</description>
    <inlineHelpText>Have you felt guilty/bad about your use?</inlineHelpText>
    <label>Guilty</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>