force-app/main/default/objects/Screening__c/fields/Harming_Others_Description__c.field-meta.xml
<CustomField>
    <fullName>Harming_Others_Description__c</fullName>
    <label>Harming Others Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>