force-app/main/default/objects/Screening__c/fields/Health_Care_Provider__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Provider__c</fullName>
    <inlineHelpText>Physical health care provider? How often do you see your physical health provider?</inlineHelpText>
    <label>Health Care Provider</label>
    <type>TextArea</type>
</CustomField>