force-app/main/default/objects/Screening__c/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <description>Historical substance use?</description>
    <inlineHelpText>Historical substance use?</inlineHelpText>
    <label>History</label>
    <type>TextArea</type>
</CustomField>