force-app/main/default/objects/Screening__c/fields/Hopeful_Residancy__c.field-meta.xml
<CustomField>
    <fullName>Hopeful_Residancy__c</fullName>
    <inlineHelpText>Where would you like to reside?</inlineHelpText>
    <label>Hopeful Residancy</label>
    <type>TextArea</type>
</CustomField>