force-app/main/default/objects/Screening__c/fields/If_No_Necessity_of_Care_Note_Completed__c.field-meta.xml
<CustomField>
    <fullName>If_No_Necessity_of_Care_Note_Completed__c</fullName>
    <label>If No, Necessity of Care Note Completed</label>
    <type>Date</type>
</CustomField>