force-app/main/default/objects/Screening__c/fields/If_No_Phone_Current_Location__c.field-meta.xml
<CustomField>
    <fullName>If_No_Phone_Current_Location__c</fullName>
    <label>If No Phone, Current Location</label>
    <type>TextArea</type>
</CustomField>