force-app/main/default/objects/Screening__c/fields/If_Yes_receiving_treatment__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_receiving_treatment__c</fullName>
    <label>If Yes, receiving treatment?</label>
    <type>TextArea</type>
</CustomField>