force-app/main/default/objects/Screening__c/fields/Incident_Reports__c.field-meta.xml
<CustomField>
    <fullName>Incident_Reports__c</fullName>
    <label>Incident Reports?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>