force-app/main/default/objects/Screening__c/fields/Infections_Description__c.field-meta.xml
<CustomField>
    <fullName>Infections_Description__c</fullName>
    <label>Infections Description</label>
    <type>TextArea</type>
</CustomField>