force-app/main/default/objects/Screening__c/fields/Infectious_Disease_Description__c.field-meta.xml
<CustomField>
    <fullName>Infectious_Disease_Description__c</fullName>
    <label>Infectious Disease Description</label>
    <type>TextArea</type>
</CustomField>