force-app/main/default/objects/Screening__c/fields/Insulin_Dependence_Description__c.field-meta.xml
<CustomField>
    <fullName>Insulin_Dependence_Description__c</fullName>
    <label>Insulin Dependence Description</label>
    <type>TextArea</type>
</CustomField>