force-app/main/default/objects/Screening__c/fields/Insurance_Description__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Description__c</fullName>
    <label>Insurance Description</label>
    <type>TextArea</type>
</CustomField>