force-app/main/default/objects/Screening__c/fields/Interpersonal_Functioning__c.field-meta.xml
<CustomField>
    <fullName>Interpersonal_Functioning__c</fullName>
    <inlineHelpText>relationship with family</inlineHelpText>
    <label>Interpersonal Functioning</label>
    <type>TextArea</type>
</CustomField>