force-app/main/default/objects/Screening__c/fields/Is_FA_complete__c.field-meta.xml
<CustomField>
    <fullName>Is_FA_complete__c</fullName>
    <label>Is FA complete?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>