force-app/main/default/objects/Screening__c/fields/Legal_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Legal_Concerns__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Past or current legal concerns?</inlineHelpText>
    <label>Legal Concerns</label>
    <type>Checkbox</type>
</CustomField>