force-app/main/default/objects/Screening__c/fields/Legal_Concerns_Description__c.field-meta.xml
<CustomField>
    <fullName>Legal_Concerns_Description__c</fullName>
    <label>Legal Concerns Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>