force-app/main/default/objects/Screening__c/fields/Living_Situation_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Living_Situation_Barriers__c</fullName>
    <inlineHelpText>Barriers in current living situation?</inlineHelpText>
    <label>Living Situation Barriers</label>
    <type>TextArea</type>
</CustomField>