force-app/main/default/objects/Screening__c/fields/Long_Term_Housing_Referral__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Housing_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you interested in housing with supports?</description>
    <label>Long Term Housing Referral?</label>
    <type>Checkbox</type>
</CustomField>