force-app/main/default/objects/Screening__c/fields/MA_Letter_Received__c.field-meta.xml
<CustomField>
    <fullName>MA_Letter_Received__c</fullName>
    <label>MA Letter Received</label>
    <type>Date</type>
</CustomField>