force-app/main/default/objects/Screening__c/fields/Medical_Supports__c.field-meta.xml
<CustomField>
    <fullName>Medical_Supports__c</fullName>
    <description>Do you have a primary care physician? Are you up-to-date with routine healthcare appointments?
Have you faced any challenges in accessing healthcare services?</description>
    <inlineHelpText>Do you have a primary care physician? Are you up-to-date with routine healthcare appointments?
Have you faced any challenges in accessing healthcare services?</inlineHelpText>
    <label>Medical Supports</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>