force-app/main/default/objects/Screening__c/fields/Medication_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Medication_Assistance__c</fullName>
    <description>What is the level of need with medication assistance</description>
    <label>Medication Assistance</label>
    <type>TextArea</type>
</CustomField>