force-app/main/default/objects/Screening__c/fields/Mental_Health_Description__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Description__c</fullName>
    <label>Mental Health Description</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>