force-app/main/default/objects/Screening__c/fields/Mental_Health_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Diagnosis__c</fullName>
    <label>Mental Health Diagnosis</label>
    <type>TextArea</type>
</CustomField>