force-app/main/default/objects/Screening__c/fields/MH_Crisis__c.field-meta.xml
<CustomField>
    <fullName>MH_Crisis__c</fullName>
    <inlineHelpText>Select all that apply</inlineHelpText>
    <label>MH Crisis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Thoughts of suicide and suicide attempts</fullName>
            </value>
            <value>
                <fullName>Self-harm</fullName>
            </value>
            <value>
                <fullName>Thoughts of harming others and history of harming others</fullName>
            </value>
            <value>
                <fullName>Substance Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>