force-app/main/default/objects/Screening__c/fields/Mobility_Issues_Description__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Issues_Description__c</fullName>
    <label>Mobility Issues Description</label>
    <type>TextArea</type>
</CustomField>