force-app/main/default/objects/Screening__c/fields/Morning_Urges__c.field-meta.xml
<CustomField>
    <fullName>Morning_Urges__c</fullName>
    <description>Have you experienced urges to use first thing in the morning to get rid of a hangover/cope with anxiety?</description>
    <inlineHelpText>Have you experienced urges to use first thing in the morning to get rid of a hangover/cope with anxiety?</inlineHelpText>
    <label>Morning Urges</label>
    <type>TextArea</type>
</CustomField>