force-app/main/default/objects/Screening__c/fields/Nebulizer_CPAP__c.field-meta.xml
<CustomField>
    <fullName>Nebulizer_CPAP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you use a nebulizer or CPAP?</inlineHelpText>
    <label>Nebulizer/CPAP</label>
    <type>Checkbox</type>
</CustomField>