force-app/main/default/objects/Screening__c/fields/Nebulizer_CPAP_Description__c.field-meta.xml
<CustomField>
    <fullName>Nebulizer_CPAP_Description__c</fullName>
    <label>Nebulizer/CPAP Description</label>
    <type>TextArea</type>
</CustomField>