force-app/main/default/objects/Screening__c/fields/Necessity_of_Care_Note_Needed__c.field-meta.xml
<CustomField>
    <fullName>Necessity_of_Care_Note_Needed__c</fullName>
    <label>Necessity of Care Note Needed?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>