force-app/main/default/objects/Screening__c/fields/Notes_on_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_Engagement__c</fullName>
    <label>Notes on Engagement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>