force-app/main/default/objects/Screening__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>What are you hoping to get out of treatment</description>
    <inlineHelpText>What are you hoping to get out of treatment</inlineHelpText>
    <label>Outcome</label>
    <type>TextArea</type>
</CustomField>