force-app/main/default/objects/Screening__c/fields/Physical_Health_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Physical_Health_Concerns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Health Concerns</label>
    <type>Checkbox</type>
</CustomField>