force-app/main/default/objects/Screening__c/fields/Physical_Health_Concerns_Description__c.field-meta.xml
<CustomField>
    <fullName>Physical_Health_Concerns_Description__c</fullName>
    <label>Physical Health Concerns Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>