force-app/main/default/objects/Screening__c/fields/Physical_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Physical_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Restrictions</label>
    <type>Checkbox</type>
</CustomField>