force-app/main/default/objects/Screening__c/fields/Physical_Restrictions_Description__c.field-meta.xml
<CustomField>
    <fullName>Physical_Restrictions_Description__c</fullName>
    <label>Physical Restrictions Description</label>
    <type>TextArea</type>
</CustomField>