force-app/main/default/objects/Screening__c/fields/Previous_ARMHS_Client__c.field-meta.xml
<CustomField>
    <fullName>Previous_ARMHS_Client__c</fullName>
    <label>Previous ARMHS Client?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>