force-app/main/default/objects/Screening__c/fields/Previous_Crisis_Stay__c.field-meta.xml
<CustomField>
    <fullName>Previous_Crisis_Stay__c</fullName>
    <inlineHelpText>Within the last 30 days</inlineHelpText>
    <label>Previous Crisis Stay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>