force-app/main/default/objects/Screening__c/fields/Psychiatrist__c.field-meta.xml
<CustomField>
    <fullName>Psychiatrist__c</fullName>
    <label>Psychiatrist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>