force-app/main/default/objects/Screening__c/fields/Purchase_and_Prepare_Food__c.field-meta.xml
<CustomField>
    <fullName>Purchase_and_Prepare_Food__c</fullName>
    <description>Are you able to get yourself to the store, bye your own food and prepare your meals independently?</description>
    <label>Purchase and Prepare Food</label>
    <type>TextArea</type>
</CustomField>