force-app/main/default/objects/Screening__c/fields/Reason_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Referral__c</fullName>
    <label>Reason for Referral</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>