force-app/main/default/objects/Screening__c/fields/Recent_Progress_Notes_To__c.field-meta.xml
<CustomField>
    <fullName>Recent_Progress_Notes_To__c</fullName>
    <label>Recent Progress Notes To:</label>
    <type>Date</type>
</CustomField>