force-app/main/default/objects/Screening__c/fields/Recommendation_for_ARMHS__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_for_ARMHS__c</fullName>
    <label>Recommendation for ARMHS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>