force-app/main/default/objects/Screening__c/fields/Referral_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Referral_Accepted__c</fullName>
    <label>Referral Accepted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>