force-app/main/default/objects/Screening__c/fields/Referral_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reviewed_By__c</fullName>
    <label>Referral Reviewed By:</label>
    <length>25</length>
    <type>Text</type>
</CustomField>