force-app/main/default/objects/Screening__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATCM</fullName>
            </value>
            <value>
                <fullName>OMH</fullName>
            </value>
            <value>
                <fullName>BHH</fullName>
            </value>
            <value>
                <fullName>CIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>